# Enrichment.Inference.Engine

./: .coderabbit.yaml  .coveragerc  .dockerignore  .editorconfig  .env.example  .env.local  .env.local.example  .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .suite6-config.json  ADR-001-ci-mypy-warnings-non-blocking.md  AGENT.md  AGENTS.md  AGENT_BOOTSTRAP.md  AI_AGENT_REVIEW_CHECKLIST.md  ARCHITECTURE.md  CHANGELOG.md  CI_WHITELIST_REGISTER.md  CLAUDE.md  CODERABBIT.md  CONFIG_ENV_CONTRACT.md  CURSOR.md  Clean-CRM-Data-Readiness-Checklist.md  Clean-CRM-for-AI-Business-Case.md  Core Gap Analysis-1.md  Core Gap Analysis-2.md  DEPENDENCY_SURFACE.md  Dockerfile  Dockerfile.prod  EXECUTION_FLOWS.md  FILE_INDEX_FOR_AGENTS.md  File Build Plan.md  GUARDRAILS.md  INVARIANTS.md  LICENSE  Makefile  PlasticOS Graph Cognitive Engine.yaml  REPO_MAP.md  (+17 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  env.template  pr_review_config.yaml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/agents/: enrichment-agent.md
.github/workflows/: audit-pr-review.yml  ci-quality.yml  ci.yml  codeql.yml  coderabbit-notify.yml  compliance.yml  docker-build.yml  docs-consistency.yml  docs-sync.yml  gitguardian.yml  k8s-deploy.yml  l9-constitution-gate.yml  l9-contract-control.yml  perplexity-code-review.yml  pr-pipeline.yml  pr-review-enforcement.yml  refactoring-validation.yml  release-drafter.yml  release.yml  sonarcloud.yml  supply-chain.yml  telegram-pr-review-notify.yml  test.yml
Current Work/: Execution Directive — Recursive Output Optimizatio.md
Current Work/Enrichment.Inference.Engine — File Pack v2/: .env.example  Dockerfile  README.md  pyproject.toml
Current Work/Enrichment.Inference.Engine — File Pack v2/.github/workflows/: ci.yml
Current Work/Enrichment.Inference.Engine — File Pack v2/app/core/: auth.py  config.py  dependencies.py
Current Work/Enrichment.Inference.Engine — File Pack v2/app/services/score/: scorer.py
Current Work/Enrichment.Inference.Engine — File Pack v2/codegen/templates/config/: schema.py.j2
Current Work/Enrichment.Inference.Engine — File Pack v2/codegen/templates/engine/: __init__.py.j2
Current Work/Enrichment.Inference.Engine — File Pack v2/codegen/templates/gates/: compiler.py.j2
Current Work/Enrichment.Inference.Engine — File Pack v2/codegen/templates/scoring/: assembler.py.j2
Current Work/Enrichment.Inference.Engine — File Pack v2/domains/plasticos/: spec.yaml
Current Work/Enrichment.Inference.Engine — File Pack v2/migrations/: env.py
Current Work/Enrichment.Inference.Engine — File Pack v2/migrations/versions/: 001_initial_schema.py
Current Work/Enrichment.Inference.Engine — File Pack v2/tests/fixtures/: plasticos_seed.cypher
Current Work/Enrichment.Inference.Engine — File Pack v2/tests/integration/: conftest.py
Current Work/Enrichment.Inference.Engine — File Pack v2/tests/load/: locustfile.py
Current Work/Enrichment.Inference.Engine — File Pack v2/tests/unit/: test_cost_tracker.py  test_field_confidence.py  test_grade_engine.py  test_provenance.py  test_rule_engine.py
Enrichment-Deployment-pack/: Makefile  Unknown file.dockerignore  Unknown file.env.example  gap analysis.md
LEAD ENRICHMENT - ODOO - Enrichment Complete Module/: kernel.odoo19.repo.md  patch_d_auto_rag_enrichment.patch  prompt.odoo-19.compliance.audit.md
app/: __init__.py  main.py
app/agents/: __init__.py  (+5 more)
chassis/: __init__.py  envelope.py  lifecycle.py  middleware.py  node_client.py  registry.py  router.py
config/: enrichment_sources.yaml  inference_rules.yaml  mcp_resources.yaml  provider_config.yaml  quality_thresholds.yaml  waterfall_config.yaml
docs/: AUDIT-2026-03-31.md  PR_BLOCKER_AUDIT_UPDATED_2026-04-02.md  belief_propagation_integration_spec.md  belief_propagation_spec.yaml  integration_runbook.md  pack_execution_guide.md  phase5_readiness_validation_guide.md  runtime_completeness_execution_guide.md
kb/: plastics_recycling.yaml
local_pr_pipeline/: README.md  check_compliance_terminology.py  compliance_kb_validate.py  contract_bound_local.py  docker-compose.pr.yml  docs_consistency_local.sh  docs_link_check_local.py  pr_pipeline.sh  run_pr_select_gates.py
migrations/: env.py
observability/: 1_observability_telemetry.py
readme/: CICD_PIPELINE.md
reports/: GMP-Report-129-PR43-Contract-Followups.md  GMP-Report-CHASSIS-001-Fix-l9-chassis-Import-Path.md  GMP-Report-CI-Workflow-Integration.md  GMP-Report-ENRICH-001-Merge-Deployment-Pack-Into-Waterfall.md  GMP-Report-TRANSPORT-SDK-Cutover.md  SYSTEM-BRIEF-DomainEnrichment-Architecture-AI.md  SYSTEM-BRIEF-DomainEnrichment-Architecture-HUMAN.md
scripts/: l9_contract_control.py  run_simulation_demo.py  validate_phase5_readiness.py  verify_node_constitution.py
templates/: styleguide.template.md
tests/: __init__.py  conftest.py  test suite.md  test_agents.py  test_api.py  test_belief_propagation.py  test_belief_propagation_toth.py  test_consensus_engine.py  test_convergence_controller.py  test_cost_tracker.py  test_crm_clients.py  test_crm_field_scanner.py  test_crm_integration.py  test_enrichment_orchestrator.py  test_enrichment_profile.py  test_enrichment_sources.py  test_field_classifier.py  test_field_confidence.py  test_gap_fixes.py  test_grade_engine.py  test_graph_query.py  test_handlers_integration.py  test_high_leverage.py  test_inference_bridge_adapter.py  test_kb_resolver.py  test_loop_schemas.py  test_loop_state.py  test_meta_prompt_planner.py  test_packet_bridge.py  test_pass_telemetry.py  test_pplx_research.py  test_pr20_import_fix.py  test_pr21_packet_router.py  test_pr21_persistence.py  test_pr22_converge_endpoint.py  test_pr22_fields_endpoint.py  test_rule_engine.py  test_rule_loader.py  test_schema_proposer.py  test_search_optimizer.py  (+6 more)
tools/: ai_review.py  audit_engine.py  l9_enrichment_manifest.yaml  perplexity_code_review.py  pplx_research.py  sync_github_actions_secrets.sh  telegram_review_webhook.py  telegram_send_message.py  telegram_visibility.py  verify_contracts.py
(+472 files in other folders)
