[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enrichment-inference-engine"
version = "0.1.0"
description = "L9 Platform Enrichment & Inference Engine"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0,<1.0",
    "uvicorn[standard]>=0.27.0,<1.0",
    "pydantic>=2.5,<3.0",
    "pydantic-settings>=2.1,<3.0",
    "structlog>=24.1,<25.0",
    "redis>=5.0,<6.0",
    "httpx>=0.26,<1.0",
    "prometheus-client>=0.20,<1.0",
    "psutil>=5.9,<7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-cov>=4.1,<5.0",
    "pytest-asyncio>=0.23,<1.0",
    "ruff>=0.2,<1.0",
    "mypy>=1.8,<2.0",
    "pip-audit>=2.7,<3.0",
    "bandit>=1.7,<2.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "C4", "PT", "SIM", "ARG", "TCH"]
ignore = [
    "E501",    # Line too long (handled by formatter)
    "TC001",   # Typing-only first-party import
    "TC002",   # Typing-only third-party import
    "TC003",   # Typing-only standard library import
    "B007",    # Unused loop variable
    "B008",    # Function call in argument defaults
    "TRY400",  # Use logging.exception instead of logging.error
    "ARG001",  # Unused function argument (handler interface compliance)
    "ARG002",  # Unused method argument
    "ARG003",  # Unused class method argument
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "unit: Unit tests (no external dependencies)",
    "integration: Integration tests (requires services)",
    "slow: Slow-running tests",
]
